--- a/racun.html
+++ b/racun.html
@@ -38,7 +38,11 @@
             color: #555;
         }
         input[type="text"],
-        input[type="date"],
+        input[type="date"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+        }
         input[type="number"] {
             width: 100%;
             padding: 10px;
@@ -124,6 +128,19 @@
         .generate-pdf-btn {
             margin-top: 20px;
         }
+
+        input {
+            width: 100%;
+            font-size: 16px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+
+
+
     </style>
 </head>
 <body>
