--- a/ponuda.html
+++ b/ponuda.html
@@ -39,7 +39,12 @@
             color: #555;
         }
         input[type="text"],
-        input[type="date"],
+        input[type="date"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+        }
+
         input[type="number"] {
             width: 100%;
             padding: 10px;
@@ -48,52 +53,22 @@
             border-radius: 4px;
             box-sizing: border-box;
         }
-        .item {
-            width: calc(100% - 22px);
-        }
-        .quantity,
-        .price {
-            width: calc(50% - 22px);
-        }
         .item-row {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 10px;
-        }
-        .item-row label,
-        .item-row input {
-            margin-bottom: 10px;
-        }
-        .item-row input {
-            flex: 1;
-            margin-right: 10px;
-        }
-        .item-row input:last-child {
-            margin-right: 0;
-        }
-        .item-row .item {
-            flex: 2;
-        }
-        .item-row .quantity,
-        .item-row .price {
-            flex: 1;
-        }
-        .form-row {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
-            gap: 20px; /* Add gap between form fields */
-        }
-        .form-row .field {
-            flex: 1;
-            min-width: calc(50% - 10px);
+            flex-direction: column;
             margin-bottom: 15px;
         }
-        .form-row label {
-            margin-bottom: 5px;
+        .item-row input,
+        .item-row select {
+            margin-bottom: 10px;
+        }
+        .item-details {
+            display: flex;
+            gap: 10px;
+        }
+        .item-details input,
+        .item-details select {
+            flex: 1;
         }
         .buttons {
             display: flex;
@@ -137,21 +112,32 @@
         input[type="button"]:hover {
             background-color: #9e9a9a;
         }
-        @media (max-width: 600px) {
-            .item-row input {
-                flex: 1 1 100%;
-                margin-right: 0;
-            }
-            .item-row .item {
-                flex: 1 1 100%;
-            }
-            .item-row .quantity,
-            .item-row .price {
-                flex: 1 1 100%;
-            }
-            .form-row .field {
-                width: 100%;
-            }
+        /* Adjusting the layout of quantity and unit inputs */
+        .item-row .item-details {
+            display: flex;
+            align-items: center;
+        }
+        .item-row .item-details input,
+        .item-row .item-details select {
+            width: 30%;
+        }
+        .item-row .item-details input[type="number"] {
+            width: 40%;
+        }
+        .item-row .item-details select {
+            width: 25%;
+        }
+        .generate-pdf-btn {
+            margin-top: 20px;
+        }
+
+        input {
+            width: 100%;
+            font-size: 16px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
         }
     </style>
 </head>
@@ -190,14 +176,16 @@
             <div class="item-row">
                 <label for="item">Vrsta usluge:</label>
                 <input type="text" class="item" name="item[]" required>
-                <label for="quantity">Količina:</label>
-                <input type="number" class="quantity" name="quantity[]" required>
-                <select class="unit" name="unit[]">
-                    <option value="m²">m²</option>
-                    <option value="m">m</option>
-                </select>
-                <label for="price">Cijena:</label>
-                <input type="number" class="price" name="price[]" required>
+                <div class="item-details">
+                    <label for="quantity">Količina:</label>
+                    <input type="number" class="quantity" name="quantity[]" required>
+                    <select class="unit" name="unit[]">
+                        <option value="m²">m²</option>
+                        <option value="m">m</option>
+                    </select>
+                    <label for="price">Cijena:</label>
+                    <input type="number" class="price" name="price[]" required>
+                </div>
             </div>
         </div>
 
@@ -217,19 +205,20 @@
         function addItem() {
             const itemsDiv = document.getElementById('items');
             const newItemRow = document.createElement('div');
-            newItemRow.className = 'item-row';
-            newItemRow.className = 'item-row';
+            newItemRow.className = 'item-row'; 
             newItemRow.innerHTML = `
                 <label for="item">Vrsta usluge:</label>
                 <input type="text" class="item" name="item[]" required>
-                <label for="quantity">Količina:</label>
-                <input type="number" class="quantity" name="quantity[]" required>
-                <select class="unit" name="unit[]">
-                    <option value="m²">m²</option>
-                    <option value="m">m</option>
-                </select>
-                <label for="price">Cijena:</label>
-                <input type="number" class="price" name="price[]" required>
+                <div class="item-details">
+                    <label for="quantity">Količina:</label>
+                    <input type="number" class="quantity" name="quantity[]" required>
+                    <select class="unit" name="unit[]">
+                        <option value="m²">m²</option>
+                        <option value="m">m</option>
+                    </select>
+                    <label for="price">Cijena:</label>
+                    <input type="number" class="price" name="price[]" required>
+                </div>
             `;
             itemsDiv.appendChild(newItemRow);
         }
