--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden; /* Prevent page scrolling */
-            background-attachment: fixed;
-
+            overflow: hidden; /* Prevent page scrolling *
         }
+
         .container {
             text-align: center;
             background-color: white;
