--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            overflow: hidden; /* Prevent page scrolling *
+            overflow: hidden; /* Prevent page scrolling */
+            background-attachment: fixed;
+
         }
 
         .container {
