--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-image: url('/ikgnew/pozadina.JPG');
+            background-image: url('/ikgnew/pozadina.jpg');
             background-size: cover;
             background-position: center;
             margin: 0;
